<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etInputName"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:hint="@string/note_name_hint" />

    <EditText
        android:id="@+id/etInputContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_content_hint"
        android:minLines="5"
        android:gravity="top" />
    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />
</LinearLayout>